Version next
* Firefox 6.0a1 changed the nsIDOMWindow interface ID. Make S4E compatible.
* Fix unchecked usage of the urlbar element (causes errors when it's not on a toolbar).
* Minimize contact with the XULBrowserWindow object, and make bindings on it more robust.
* Added translations for: el, es-ES, he
* Updated translations for: ro

Version 2011.04.06.18
* Make sure the urlbar placeholder text is hidden when showing link/status.
* Add new strings for all translations.
* Added translations for: cs, ru

Version 2011.04.02.18b
* Add strings that were removed from Firefox 4.2a1pre.
* Centralize stringbundle DOM calls.
* Added translations for: eo
* Updated translations for: bg-BG, hsb-DE

Version 2011.04.01.00
* Localize the install manifest.
* Add new strings for all translations.
* Added translations for: bg-BG, hsb-DE
* Updated translations for: da, fr, hu, it-IT, ro, zh-CN

Version 2011.03.27.22b
* Put S4E style borders (for the Add-on Bar and other bottom toolbars) behind a preference. Disable by default.
* Set urlbar compatibility function shims on the prototype instead of the instance. Fixes compatibility with dynamic bindings (i.e. Smart Text).
* If there are only paused downloads, show the paused count in the button and tooltip ('unknown time remaining' is useless).
* Fix assertion in Firefox 4.2a1pre.
* Add status text getters (better extension integration support).
* Remove delay before showing link/status in the urlbar.
* Add options to control the delay before showing/hiding hovered links.
* Add meta.properties locale file for generating install.rdf l10n blocks.
* Added translations for: sr
* Updated translations for: de, zh-CN

Version 2011.03.21.22
* Make S4E more robust when dealing with incompatible extensions and missing UI elements.
* Properly handle location bar deconstruction when it is removed from the UI.
* Update copyright dates.
* Updated translations for: ro

Version 2011.03.16.22
Summary of changes:
* Rewrote preferences backed and UI.